Fix Trashbin icon being cropped when open

--- a/src/styles/components/header/trashbin.module.scss
+++ b/src/styles/components/header/trashbin.module.scss
@@ -1,2 +1,5 @@
 .wrapper {
+  svg {
+    overflow: visible;
+  }
 }
